<resources>
    <string name="app_name">알바집</string>
    <string name="tv_alert_info">반드시 본인의 매장을 등록해주세요. 본인의 매장이 아닐 경우 알바집 서비스 이용이 제한됩니다.</string>
    <string name="title_activity_mon_boarding">MOnBoardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- common -->
    <string name="common_done">완료</string>
    <string name="common_confirm">확인</string>
    <string name="common_rest_day">휴무일</string>
    <string name="common_24_hour">24시간 영업</string>

    <!-- 코드 복사 -->
    <string name="info_title">{%s} 알바생에게\n아래 코드를 공유해주세요</string>
    <!-- 알바생 추가 -->
    <string name="todo_position">{%s} 알바생 업무리스트 작성하기</string>
    <string name="how_to_write"><u>어떻게 작성해야 될 지 모르겠다면.</u></string>

    <!-- 매장 추가 정보 -->
    <string name="input_place_more_title">추가 정보를 입력해주세요.</string>
    <string name="input_place_more_running_hour">영업시간</string>
    <string name="input_place_more_input_done">입력완료</string>
    <string name="input_place_more_set_running_time">영업시간 설정하기</string>
    <string name="input_place_more_rest_day">공휴일은 쉬어요.</string>
    <string name="input_place_more_pay_day">급여일</string>
    <string name="input_place_more_register">매장 등록하기</string>

    <!-- 영업 시간 설정 -->
    <string name="running_time_title">영업시간 설정</string>
    <string name="running_time_same">모든 영업시간이 같아요.</string>

</resources>