<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_late"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/ibtn_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:id="@+id/tv_month_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:letterSpacing="-0.03"
                android:text="매장정보 수정"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:letterSpacing="-0.03"
                android:text="완료"
                android:textColor="#ffc400"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="완료" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#1a000000" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:id="@+id/ll_input_place_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tb_late"
        app:layout_constraintStart_toStartOf="@id/tb_late"
        app:layout_constraintTop_toBottomOf="@id/tb_late">

        <TextView
            android:id="@+id/tv_input_place_running_hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_medium_otf"
            android:gravity="center"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="13sp"
            android:text="@string/input_place_more_running_hour"
            android:textColor="@color/text3_6f6f6f"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_input_place_input_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/roboto_medium_otf"
            android:gravity="center"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="15sp"
            android:text="@string/input_place_more_input_done"
            android:textColor="@color/alert2_1dbe4e"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_input_place_check"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_place_more_check_active"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_input_place_set_run_time_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_input_place_more_inactive_10"
        android:fontFamily="@font/roboto_bold_otf"
        android:gravity="center"
        android:paddingVertical="11dp"
        android:text="@string/input_place_more_set_running_time"
        android:textColor="@color/text3_6f6f6f"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/ll_input_place_txt"
        app:layout_constraintStart_toStartOf="@id/ll_input_place_txt"
        app:layout_constraintTop_toBottomOf="@id/ll_input_place_txt" />

    <LinearLayout
        android:id="@+id/ll_input_place_check_rest_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/tv_input_place_set_run_time_btn"
        app:layout_constraintStart_toStartOf="@id/tv_input_place_set_run_time_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_input_place_set_run_time_btn">


        <ImageButton
            android:id="@+id/cb_input_place_rest_day"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/selector_circle_yellow_checkbox"
            android:button="@android:color/transparent"
            android:checked="false"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_input_place_check_same"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/roboto_medium_otf"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="7sp"
            android:text="@string/input_place_more_rest_day"
            android:textColor="@color/text4_343434"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_input_place_more_pay_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto_medium_otf"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="13sp"
        android:text="@string/input_place_more_pay_day"
        android:textColor="@color/text3_6f6f6f"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/ll_input_place_check_rest_day"
        app:layout_constraintStart_toStartOf="@id/ll_input_place_check_rest_day"
        app:layout_constraintTop_toBottomOf="@id/ll_input_place_check_rest_day" />

    <RelativeLayout
        android:id="@+id/rl_input_place_more_pay_day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_input_place_more_10"
        android:paddingVertical="14dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_input_place_more_pay_day"
        app:layout_constraintStart_toStartOf="@id/tv_input_place_more_pay_day"
        app:layout_constraintTop_toBottomOf="@id/tv_input_place_more_pay_day">

        <TextView
            android:id="@+id/tv_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:letterSpacing="-0.03"
            android:text="매월"
            android:textColor="@color/text2_a3a3a3"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_select_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/tv_day"
            android:background="@null"
            android:gravity="center|end"
            android:letterSpacing="-0.03"
            tools:text="1 - 31"
            android:textColor="@color/text4_343434"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:letterSpacing="-0.03"
            android:text="일"
            android:textColor="@color/text2_a3a3a3"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>