<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray3_efefef">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_running_time_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_running_time_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_running_time_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_bold_otf"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:text="@string/running_time_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_running_time_done"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/roboto_regular_otf"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:paddingHorizontal="10dp"
            android:text="@string/common_done"
            android:textColor="@color/selector_tv_done"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_running_time"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#1a000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_running_time_bar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_running_time_same"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_running_time"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/ll_running_time_same"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="22dp"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">


            <CheckBox
                android:id="@+id/cb_running_time_checkbox"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:gravity="center"
                android:background="@drawable/selector_input_place_checkbox"
                android:button="@android:color/transparent"
                android:checked="false"/>

            <TextView
                android:id="@+id/tv_running_time_same"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text4_343434"
                android:letterSpacing="-0.03"
                android:lineSpacingExtra="7sp"
                android:textSize="16sp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/roboto_medium_otf"
                android:text="@string/running_time_same"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tv_running_time_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_running_time_same"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>